src/static/main.css
:root {
    --primary-color: white;
    --primary-hover: #d7d7ef;
    --primary-active: #cfcfdf;
    --secondary-color: #0f2f9f;
    --secondary-hover: #071f8f;
    --secondary-active: #000f7f;
    --secondary-light: #1f4fcf;
}

html, body {
    background-color: var(--primary-color);
    color: var(--secondary-color);
}

header {
    background-color: var(--secondary-color);
    color: var(--primary-color);
}

header a, header a:link, header a:visited {
    color: var(--primary-color);
}

header a:hover {
    color: var(--primary-hover);
}

header a:active {
    color: var(--primary-active);
}

main {
    padding: 20px;
    margin: auto;
    max-width: 1000px;
}

footer {
    background-color: var(--primary-color);
    color: var(--secondary-color);
    padding: 20px;
    text-align: center;
}

h1 {
    margin-bottom: 24px;
}

h2, h3 {
    margin-bottom: 20px;
}

h4, h5, h6 {
    margin-bottom: 16px;
}

.btn-primary, .btn-primary:visited, .btn-primary:focus {
    background-color: var(--secondary-color);
}

.btn-primary:hover {
    background-color: var(--secondary-hover);
}

.btn-primary:active {
    background-color: var(--secondary-active) !important;
}

input:focus, select:focus, textarea:focus {
    border-color: var(--secondary-light) !important;
    box-shadow: 0 0 2pt var(--secondary-light) !important;
    outline: 0 none;
}

.centered {
    text-align: center;
}

.even-spacing {
    margin: 0 auto;
}

.justified {
    text-align: justify;
}

.thin {
    margin: 0 auto;
    max-width: 600px;
}

#book-image {
    width: 100%;
    max-height: 300px;
    object-fit: contain;
}

#user-image {
    width: 100%;
    max-height: 100px;
    object-fit: contain;
}

#img-circle {
    width: 30px;
    height: 30px;
    border-radius: 50%;
    background-color: black;
}

.space-above {
    margin-top: 24px;
}

.small-space-above {
    margin-top: 16px;
}

.space-below {
    margin-bottom: 24px;
}

.space-between {
    display: flex;
    justify-content: space-between;
}

.flex-start {
    display: flex;
    justify-content: flex-start;
}
.flex-end {
    display: flex;
    align-items: flex-end;
}

.hidden {
    display: none;
}

.normal-link {
    color: var(--secondary-light);
}

.normal-link:hover {
    color: var(--secondary-hover);
}

.normal-link:active {
    color: var(--secondary-active);
}

/* NavBar */
@media (min-width: 768px) { 
    .flex-responsive {
        display: flex;
        justify-content: space-between;
    }
}

.bg-dark {
    background-color: var(--secondary-active)!important;
}

/* Index Page */

#index .card {
    margin: 0 auto;
    border: none;
    padding: 0px 20px;
}

#index .thumbnail {
    width: 250px;
    height: 250px;
    object-fit: cover;
}

#index .card-price {
    font-size: 1rem;
    color: black;
}

#index .card-body {
    color: black;
}

#index .card-info {
    font-size: 1rem;
}

#index .title {
    font-weight: 700;
    color: var(--secondary-active);
}

